--- a/src/package.xml
+++ b/src/package.xml
@@ -31,6 +31,8 @@
         <members>ProtectFlagStatusTriggerTest</members>
         <members>ScheduledJobSafe</members>
         <members>ScheduledJobSafeTest</members>
+        <members>UserAvailabilityTrigger_Test</members>
+        <members>FlagOnUninstall</members>
         <name>ApexClass</name>
     </types>
     <types>
@@ -54,6 +56,7 @@
     </types>
     <types>
         <members>ProtectFlagStatus</members>
+        <members>UserAvailabilityTrigger</members>
         <name>ApexTrigger</name>
     </types>
     <version>60.0</version>
